<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main"
    tools:context=".MetronomeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="72dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/top_label"
        android:textAllCaps="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:elevation="8dp"
        tools:ignore="UnusedAttribute">

        <ImageButton
            android:id="@+id/btn_vibration"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/vibration_btn"
            android:scaleType="centerInside"
            android:paddingTop="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="16dp"
            android:background="@color/toolBarColor"/>
        <ImageButton
            android:id="@+id/btn_flash"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/flash_btn"
            android:scaleType="centerInside"
            android:paddingTop="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="16dp"
            android:background="@color/toolBarColor"/>
        <ImageButton
            android:id="@+id/btn_sound"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/sound_btn"
            android:scaleType="centerInside"
            android:paddingTop="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="16dp"
            android:background="@color/toolBarColor"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="36dp"
        android:gravity="center"
        android:text="@string/set_bpm_label"
        android:textAllCaps="true"
        android:fontFamily="condensed-light"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/rate_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:text="@string/default_value"
            android:maxLength="3"
            android:inputType="number"
            android:background="@android:color/transparent"
            android:focusableInTouchMode="true"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:fontFamily="sans-serif"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="36sp"
            android:text="@string/bpm"
            android:fontFamily="sans-serif"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ImageButton
            android:id="@+id/btn_minus"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:baselineAlignBottom="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_minus"
            android:background="@android:color/transparent"/>

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:thumb="@drawable/ic_arrows"
            android:progressDrawable="@drawable/seekbar_progress_drawable"
            android:thumbOffset="-1dp"
            android:max="90"
            android:progress="20"/>

        <ImageButton
            android:id="@+id/btn_plus"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:baselineAlignBottom="true"
            android:src="@drawable/ic_plus"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:layout_gravity="center"
        android:text="@string/label_indicator"
        android:textAllCaps="true"/>
    <ImageButton
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:layout_gravity="center"
        android:src="@drawable/indicator"
        android:scaleType="centerCrop"
        android:background="@android:color/transparent"/>
    <Button
        android:id="@+id/btn_start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textAllCaps="true"
        android:background="#03a9f4"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:layout_marginTop="24dp"/>


</LinearLayout>
